Tell the JVM to be aware of Docker memory limits